--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.day-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 80px;
+  width: 80px;
+  border: thin solid black;
+  flex: 1;
+  padding: 5px;
+}
+
+.day-number {
+  display: flex;
+  height: 20px;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.mini-reminder {
+  height: auto;
+  width: 80%;
+  margin: 2px;
+  padding: 4px;
+  border: none;
+  border-radius: 4px;
+  background-color: khaki;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dialog {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: hsla(0,0%,0%,0.5);
+}
+
+.dialog-content {
+  width: 50%;
+  height: 50%;
+  margin: 15%;
+  background-color: khaki;
+}
+
+.form-container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.reminders-container{
+  overflow: auto;
+}
+
+.calendar-container{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: 10px 10% 10px;
+  align-items: center;
+}
+
+.header-row{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  flex-direction: row;
+}
+
+.header-container{
+  flex: 1;
+  padding: 5px;
+  background-color: #3A372B;
+  color: #F3F4EF;
+}
+
+.days-container{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+.week-container{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  flex-direction: row;
 }
