--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .day-container {
   display: flex;
   flex-direction: column;
-  height: 80px;
-  width: 80px;
+  height: 110px;
   border: thin solid black;
   flex: 1;
   padding: 5px;
@@ -17,13 +16,15 @@
 }
 
 .mini-reminder {
-  height: auto;
-  width: 80%;
+  height: 13px;
+  font-size: 12px;
+  width: 90%;
   margin: 2px;
   padding: 4px;
   border: none;
   border-radius: 4px;
-  background-color: khaki;
+  background-color: #B3A35F;
+  color:#F3F4EF;
 }
 
 .dialog {
@@ -40,7 +41,7 @@
   width: 50%;
   height: 50%;
   margin: 15%;
-  background-color: khaki;
+  background-color: #816E6C;
 }
 
 .form-container {
@@ -58,9 +59,10 @@
 .calendar-container{
   display: flex;
   flex-direction: column;
-  width: 70%;
+  width: 80%;
   margin: 10px 10% 10px;
   align-items: center;
+  min-width: 800px;
 }
 
 .header-row{
@@ -75,6 +77,7 @@
   padding: 5px;
   background-color: #3A372B;
   color: #F3F4EF;
+  text-align: center;
 }
 
 .days-container{
