--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   width: 50%;
   height: 50%;
   margin: 10% 25%;
-  background-color: #F3F4EF;
+  background-color: #e6e6e6;
 }
 
 .form-container {
@@ -148,4 +148,32 @@
 
 .color-label {
   margin: 5px 10px 5px 0px;
+}
+.weather {
+  display: flex;
+  align-items: center;
+}
+
+.forecast-span {
+  margin-right: 10px;
+}
+
+.weather-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.disabled {
+  color: gainsboro
+}
+
+.month-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.month-btn {
+  cursor: pointer;
 }
