--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   height: 110px;
-  border: thin solid black;
   flex: 1 1 0px;
   padding: 5px;
   width: 0;
@@ -126,7 +125,7 @@
 }
 
 .submit-btn{
-  margin: 20px 10px 10px;
+  margin: 20px 10px 20px;
   width: 200px;
   color: black;
   font-size: 1rem;
@@ -185,4 +184,9 @@
 }
 .month-btn {
   cursor: pointer;
+}
+
+.fetching-span {
+  color: silver;
+  margin-top: 5px;
 }
