--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,15 @@
   display: flex;
   height: 20px;
   width: 100%;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   flex-direction: row;
+}
+
+.delete-all {
+  font-size: 0.5rem;
+  cursor: pointer;
+  color: #5267ce;
 }
 
 .mini-reminder {
